<resources>
    <string name="app_name">App portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_intro_text">My app portfolio for Android Developer course on Udacity:</string>
    <string name="app_spotify">Spotify Streamer</string>
    <string name="app_scores">Scores App</string>
    <string name="app_library">Library App</string>
    <string name="app_build_it">Build It Bigger</string>
    <string name="app_xyz">XYZ Reader</string>
    <string name="app_capstone">Capstone: My own app</string>
</resources>
