<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_intro_text" />
    <Button
        android:id="@+id/btn_spotify"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_spotify" />
    <Button
        android:id="@+id/btn_scores"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_scores" />
    <Button
        android:id="@+id/btn_lib"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_library" />
    <Button
        android:id="@+id/btn_build"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_build_it" />
    <Button
        android:id="@+id/btn_xyz"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_xyz" />
    <Button
        android:id="@+id/btn_cap"
        style="@style/Button.Themed"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/app_capstone" />


</LinearLayout>
